--- a/FlashCards/App/cards/card.html
+++ b/FlashCards/App/cards/card.html
@@ -1,6 +1,4 @@
-﻿<div class="card_content" >        
-    <span data-bind="text: cardCount"/>
-    <span class="deckName" data-bind="text: selectedName"></span>
+﻿<div>        
     <div class="card" data-bind="click: flip">
         <div class="front face">
             <h1 data-bind="text: card.frontHeading"></h1>
