--- a/FlashCards/App/cards/card.html
+++ b/FlashCards/App/cards/card.html
@@ -1,12 +1,12 @@
 ﻿<div>        
     <div class="card" data-bind="click: flip">
         <div class="front face">
-            <h1 data-bind="text: card.frontHeading"></h1>
-            <p data-bind="text: card.front"></p>
+            <h1 data-bind="text: selected.card.frontHeading"></h1>
+            <p data-bind="text: selected.card.front"></p>
         </div>
         <div class="back face">
-            <h1 data-bind="text: card.backHeading">Capital</h1>
-            <p data-bind="text: card.back"></p>
+            <h1 data-bind="text: selected.card.backHeading"></h1>
+            <p data-bind="text: selected.card.back"></p>
         </div>
     </div>        
 </div>    
