--- a/FlashCards/App/cards/index.html
+++ b/FlashCards/App/cards/index.html
@@ -1,13 +1,17 @@
 ﻿<div>
-   <div>
-    <button class="btn previous" data-bind="enable: hasPrevious, click: previous">Previous</button>
-    <button class="btn next" data-bind="enable: hasNext, click: next">Next</button>
+   
+   <div data-bind="visible: selected.found === true">
+      <div>
+         <button class="btn previous" data-bind="enable: selected.hasPrevious, click: previous">Previous</button>
+         <button class="btn next" data-bind="enable: selected.hasNext, click: next">Next</button>
+      </div>
+   
+      <div data-bind="router: { transition:'entrance', activationData: 'helloWorld' }"></div>
+               
    </div>
-   
-   <div data-bind="router: { transition:'entrance', activationData: 'helloWorld' }"></div>
-   
-   <footer>
-      <h2>Footer</h2>
-   </footer>
+
+   <div data-bind="visible: selected.found === false">
+      <h2>Card not found.</h2>
+   </div>
 
 </div>
