Clean up the timing of chaning the card data

--- a/FlashCards/App/cards/card.html
+++ b/FlashCards/App/cards/card.html
@@ -1,10 +1,10 @@
 ﻿<div>        
     <div class="card" data-bind="click: flip">
-        <div class="front face">
+        <div class="well front face">
             <h1 data-bind="text: selected.card.frontHeading"></h1>
             <p data-bind="text: selected.card.front"></p>
         </div>
-        <div class="back face">
+        <div class="well back face">
             <h1 data-bind="text: selected.card.backHeading"></h1>
             <p data-bind="text: selected.card.back"></p>
         </div>
