Showing card cound and name

--- a/FlashCards/App/cards/card.html
+++ b/FlashCards/App/cards/card.html
@@ -1,11 +1,11 @@
 ﻿<div>        
     <div class="card" data-bind="click: flip">
-        <div class="well front face">
-            <h1 data-bind="text: selected.card.frontHeading"></h1>
+        <div class="col-xs-12 well front face ">
+            <h3 data-bind="text: selected.card.frontHeading"></h3>
             <p data-bind="text: selected.card.front"></p>
         </div>
-        <div class="well back face">
-            <h1 data-bind="text: selected.card.backHeading"></h1>
+        <div class="col-xs-12 well back face">
+            <h3 data-bind="text: selected.card.backHeading"></h3>
             <p data-bind="text: selected.card.back"></p>
         </div>
     </div>        
