Fixing the parameter issue.

--- a/FlashCards/App/cards/index.html
+++ b/FlashCards/App/cards/index.html
@@ -9,11 +9,11 @@
       </div>
       
       <div class="row status">
-         <span class="cardCount" data-bind="text: selected.selectedOf"/>
+         <span data-bind="text: selected.selectedOf"/>
          <span class="selectedName" data-bind="text: selected.name"></span>
       </div>
 
-      <div class="row" data-bind="router: { transition:'entrance', activationData: 'helloWorld' }"></div>
+      <div class="row" data-bind="router: { transition:'entrance'}"></div>
                
    </div>
 
