Adding images for ios

--- a/FlashCards/App/cards/index.html
+++ b/FlashCards/App/cards/index.html
@@ -2,9 +2,9 @@
    
    <div data-bind="visible: selected.found === true">
       <div class="row">
-         <button class="col-xs-4 col-sm-2 col-md-1 btn btn-default" 
+         <button class="col-xs-4 col-sm-2 col-lg-1 btn btn-default" 
                  data-bind="enable: selected.hasPrevious, click: previous">Previous</button>
-         <button class="col-xs-4 col-xs-offset-4 col-sm-2 col-sm-offset-8 col-md-1 col-md-offset-10 btn btn-default" 
+         <button class="col-xs-4 col-xs-offset-4 col-sm-2 col-sm-offset-8 col-lg-1 col-lg-offset-10 btn btn-default" 
                  data-bind="enable: selected.hasNext, click: next">Next</button>
       </div>
       
