--- a/FlashCards/App/cards/index.html
+++ b/FlashCards/App/cards/index.html
@@ -1,11 +1,11 @@
 ﻿<div class="col-xs-offset-1 col-xs-10">
    
    <div data-bind="visible: selected.found === true">
-      <div class="row">
-         <button class="col-xs-4 col-sm-2 col-lg-1 btn btn-default"
-                 data-bind="enable: selected.hasPrevious, click: previous">Previous</button>
-         <button class="col-xs-4 col-xs-offset-4 col-sm-2 col-sm-offset-8 col-lg-1 col-lg-offset-10 btn btn-default"
-                 data-bind="enable: selected.hasNext, click: next">Next</button>
+      <div class="row"> 
+         <button class="previous col-xs-4 col-sm-2 col-lg-1 btn btn-default"
+                 data-bind="css: {'hidden' : !selected.hasPrevious}, click: previous">Previous</button>
+         <button class="next col-xs-4 col-xs-offset-4 col-sm-2 col-sm-offset-8 col-lg-1 col-lg-offset-10 btn btn-default"
+                 data-bind="css: { 'hidden': !selected.hasNext }, click: next">Next</button>
       </div>
       
       <div class="row status">
